# caura-memclaw

./: .dockerignore  .env.example  .release-please-manifest.json  AGENT-INSTALL.md  BENCHMARKS.md  CHANGELOG.md  README.md  RELEASING.md  SECURITY.md  release-please-config.json
common/: constants.py  structlog_config.py
core-api/: Dockerfile  docker-entrypoint.sh  pyproject.toml
core-api/src/core_api/: agent_ids.py  app.py  auth.py  config.py  constants.py  consumer.py  mcp_server.py  schemas.py  suppression.py  version_compat.py
core-api/src/core_api/clients/: storage_client.py
core-api/src/core_api/middleware/: per_tenant_concurrency.py  request_observation.py  request_timeout.py
core-api/src/core_api/pipeline/compositions/: search.py  write.py
core-api/src/core_api/pipeline/steps/entity_linking/: backfill_entity_embeddings.py  discover_cross_links.py  infer_relations.py  resolve_entities.py
core-api/src/core_api/pipeline/steps/search/: __init__.py  execute_scored_search.py  extract_temporal_hint.py  load_and_serialize.py  log_recall_event.py  parallel_embed_entity_boost.py  post_filter_results.py  resolve_search_profile.py  track_recalls.py
core-api/src/core_api/pipeline/steps/write/: __init__.py  business_personal_pregate.py  check_semantic_duplicate.py  detect_near_duplicate.py  emit_memory_triple.py  governance_decision.py  governance_scan_content.py  load_tenant_config.py  merge_enrichment_fields.py  parallel_embed_enrich.py  write_memory_row.py
core-api/src/core_api/repositories/: fleet_repository.py
core-api/src/core_api/routes/: documents.py  evolve.py  fleet.py  interview.py  keystones.py  lifecycle.py  memories.py  plugin.py  reports.py  skills_inbox.py  stm.py
core-api/src/core_api/services/: agent_digest.py  agent_identity.py  agent_service.py  audit_queue.py  audit_service.py  business_classifier.py  caller_identity.py  capability_usage.py  contradiction_detector.py  crystallizer_service.py  dedup_judge.py  entity_extraction.py  entity_extraction_worker.py  evolve_service.py  governance_gate.py  governance_remediation.py  ingest_service.py  insights_service.py  interview_service.py  lifecycle_audit.py  memory_service.py  memory_stats.py  organization_settings.py  recall_service.py  report_corpus.py  session_trace.py  skill_lifecycle.py  skill_promoter.py  tenants.py
core-api/src/core_api/services/forge/: __init__.py  cron_handler.py  distill_prompt.py  fingerprint.py  forge_service.py  poison.py  sentinel_scan.py
core-api/src/core_api/services/outcome_inference/: __init__.py  contradictions.py  cross_agent_reuse.py  external_hooks.py  repeat_recall.py  supersessions.py  terminal_memory.py
core-api/src/core_api/tools/: memclaw_stats.py
core-api/tests/: test_a49_candidate_pool.py  test_agent_digest.py  test_broker_write_attribution.py
core-operations/: Dockerfile  docker-entrypoint.sh  pyproject.toml
core-operations/src/core_operations/: app.py  config.py  scheduler.py  tasks.py
core-operations/tests/: test_app.py  test_scheduler.py  test_tasks.py
core-storage-api/: Dockerfile  pyproject.toml
core-storage-api/src/core_storage_api/: app.py  config.py  schemas.py
core-storage-api/src/core_storage_api/database/: init.py
core-storage-api/src/core_storage_api/database/migrations/: env.py
core-storage-api/src/core_storage_api/database/migrations/versions/: 016_lifecycle_audit_dedup_index.py  019_tenant_suppression.py  020_forge_rejected_fingerprints.py  021_session_traces.py  022_skills_backfill_source_status.py  023_capability_usage.py  024_fleet_commands_autoupgrade_index.py  026_audit_client_event_id.py  027_recall_logging.py  028_agent_belonging.py  029_agent_activity_digest.py  030_register_memclaw_insighter.py  031_agent_owner_install_uuid.py
core-storage-api/src/core_storage_api/routers/: __init__.py  _validation.py  documents.py  entities.py  evolve.py  fleet.py  insights.py  keystones.py  lifecycle_audit.py  memories.py  reports.py  skill_factory.py  tenant_suppression.py  tenants.py
core-storage-api/src/core_storage_api/services/: keystones.py  postgres_service.py
core-storage-api/tests/: conftest.py  test_agent_digest.py  test_init_schema_at_head.py  test_integration.py  test_tenant_suppression.py
core-worker/: Dockerfile  pyproject.toml
core-worker/src/core_worker/: consumer.py
core-worker/src/core_worker/clients/: storage_client.py
core-worker/tests/: test_consumer_enrich.py
docs/: api-surfaces.md  integration-without-plugin.md  mcp-skill-delivery.md  performance.md  skills-inbox-api.md
plugin/: CHANGELOG.md  openclaw.plugin.json  package-lock.json  package.json  tools.json
scripts/: forge_dry_run.py  gen-version.sh  mcp_tool_smoke.py  repro_contradictions_diagnostic.py  repro_contradictions_not_detected.py  repro_contradictions_with_entity_links.py  wet-test-install.sh  wet_test_direction_invariance.py
tests/: _mcp_test_helpers.py  conftest.py  test_a1_15_two_tier_dedup_constants.py  test_a1_16_dedup_judge_dispatch.py  test_a33_subject_discriminator.py  test_a4_12_contradiction_judge_confidence.py  test_a4_13_path_c_retraction.py  test_a8_enrichment_tags.py  test_a9_action_vs_episode.py  test_agent_identity_guard.py  test_api_fleet.py  test_api_interview.py  test_api_keystones.py  test_api_memories.py  test_api_status.py  test_audit_chain.py  test_audit_queue.py  test_audit_s6_c1_events.py  test_auth_context.py  test_broker_bulk_write_ownership.py  test_broker_ingest_stm_ownership.py  test_broker_owned_agent_id.py  test_broker_write_ownership.py  test_business_personal_pregate.py  test_c3_c8_reserved_memory_types.py  test_caller_identity.py  test_capability_usage.py  test_caura_000_graph_frontier_cap.py  test_caura_129_entity_aware_retraction_prompt.py  test_caura_131_entity_aware_path_c_detection.py  test_cluster_fingerprint.py  test_consumer_enriched.py  test_contradiction_direction_invariance.py  test_contradiction_fanout_bounded.py  test_contradiction_providers.py  test_contradiction_subject_gate.py  test_cross_tenant_audit_surfaces.py  test_cross_tenant_auth.py  test_direct_mcp_skill.py  (+68 more)
(+96 files in other folders)
