[project]
name = "core-worker"
version = "2.14.0"
description = "MemClaw core async worker — subscribes to memclaw.memory.embed-requested and backfills embeddings"
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "pydantic>=2.0,<3",
    "pydantic-settings>=2.0,<3",
    "httpx>=0.27,<1",
    "structlog>=25.4,<26",
    "openai>=2.1,<3",
    # CAURA-595: ``common.enrichment.service._parse_temporal`` validates
    # the LLM's ``ts_valid_*`` output via ``dateutil.parser`` — runtime
    # dep dragged in by the extraction. Same version pin as
    # ``core-api`` so both services resolve to the same wheel and any
    # CVE / sec-fix lands together.
    "python-dateutil>=2.8,<3",
    # CAURA-591/CAURA-595: ``clients.identity_token`` caches Cloud Run
    # ID tokens per audience via ``cachetools.TTLCache``. Same version
    # pin as ``core-api`` so both services share the wheel.
    "cachetools>=5.3",
    # CAURA-591/CAURA-595: ``identity_token._fetch_blocking`` imports
    # ``requests`` for ``google.auth.transport.requests.Request``.
    # Declared explicitly so we don't rely on the [pubsub] extra's
    # transitive chain — if that chain ever breaks, the lazy import in
    # ``_fetch_blocking`` would silently catch ``ImportError`` and all
    # Cloud Run requests would go unauthenticated with no WARNING log.
    "requests>=2.32,<3",
]

[project.optional-dependencies]
# Optional: required only when EVENT_BUS_BACKEND=pubsub (SaaS).
# Standalone OSS installs use the in-process bus (no Pub/Sub at all —
# core-api dispatches directly to the consumer in the same process).
pubsub = ["google-cloud-pubsub>=2.23,<3"]
vertex = ["google-cloud-aiplatform>=1.80,<2"]
local = ["sentence-transformers>=3.0,<4"]
dev = [
    "core-worker[test,pubsub]",
    "mypy>=1.13,<2.0",
    "ruff>=0.8,<1.0",
]
test = [
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.24,<1.0",
    "pytest-cov>=6.0,<7.0",
    "httpx>=0.27,<1.0",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 110

exclude = [
    ".git", ".mypy_cache", ".pytest_cache", ".ruff_cache",
    ".venv", "__pycache__", "build", "dist",
]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "B", "C4", "UP", "ARG",
    "SIM", "TCH", "PTH", "RUF", "ASYNC",
]
ignore = [
    "E501", "TC001", "TC002", "TC003", "ARG001", "ARG002",
    "B008", "B904", "RUF022", "PTH123", "RUF006", "SIM117",
    "RUF012", "RUF009",
]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG", "S101", "F841"]
"__init__.py" = ["F401", "E402"]
"**/app.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["core_worker", "common"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
explicit_package_bases = true
warn_return_any = false
warn_unused_ignores = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
fail_under = 50
show_missing = true
